Provide dynamic tab rendering

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -717,6 +717,14 @@ Colors
   height: var(--spacing-07);
 }
 
+.width-08 {
+  width: var(--spacing-08);
+}
+
+.width-250px {
+  width: 250px;
+}
+
 /*endregion*/
 
 /*region Behaviour*/
