First working raw data filter grid (#1342)
Replaces the old grid view for datasets and uses the new filter grid component.

--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -286,7 +286,7 @@
 
 
 .main.raw-data .raw-data-details-component {
-  grid-area: rawdatadetails
+  grid-area: rawdatadetails;
 }
 
 .main.raw-data .raw-data-main-content {
